# sql-ai-agent

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/agents/: main_agent.py
src/database/: config.py  initialise_db.py  insert_db_rows.py
src/postgresql/: main.py  workflow.py
src/postgresql/agents/: orchestrator.py
src/sqllite3/agents/: main_agent.py
src/sqllite3/database/: initialise_db.py  local_database.db
src/tools/: sql_executor_agent.py  sql_generator_agent.py
