[project]
name = "sql-ai-agent"
version = "0.1.0"
description = "SQL DB AI Agent"
authors = [
    {name = "Abhyuday Luthra",email = "abhy3230@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
